Fixed cross origin error
Fixed: "Mixed Content: The page at 'https://ethanchiu.xyz/WatchAndLearn/view.html?videoId=8jPQjjsBbIc?query=ted%20talk' was loaded over HTTPS, but requested an insecure XMLHttpRequest endpoint 'http://www.dictionaryapi.com/api/v1/references/learners/xml/thermometer?key=eaf69752-c354-4489-8cc6-99948b85a285'. This request has been blocked; the content must be served over HTTPS."

--- a/view.html
+++ b/view.html
@@ -194,7 +194,7 @@ function queryTranslation(word,currentElement){
     function queryDictionary(word,currentElement){
       var xmlhttp = new XMLHttpRequest();
 
-      var url = "http://www.dictionaryapi.com/api/v1/references/learners/xml/"+word+"?key=eaf69752-c354-4489-8cc6-99948b85a285";
+      var url = "https://www.dictionaryapi.com/api/v1/references/learners/xml/"+word+"?key=eaf69752-c354-4489-8cc6-99948b85a285";
 
      xmlhttp.onreadystatechange = function() {
        if (this.readyState == 4 && this.status == 200) {
